This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

16-Apr-2001 (Lars Duening)  (3.3.42)
    - (object.c) Ooops, didn't compile in COMPAT mode (reported by Ralph).

13-Apr-2001 (Lars Duening)  (3.3.41)
    - (simulate.c) Made the 'illegal object to load' error message
         more informative (suggested by Freaky).
    - (mapping.c) Modified to mapping code to be able to use closures
         as proper keys.

12-Apr-2001 (Lars Duening)
    - (pkg-mysql.c) Forgot to include mstrings.h here (reported by 
        Gawain and Bardioc)
    - (sprintf.c) The formatter "%^" will print "%^" for compatibility
         with terminal_colour().
    - (closure.c, array.c) Introduced a total order on closure svalues
         which allows their use in alists and array operations like
         intersection. The same will have to be done later for their use in
         mappings (reported by Gnomi).

11-Apr-2001 (Lars Duening)  (3.3.40)
    - (prolang.y, interpret.c, func_spec) Wildcarded calls to inherited
        functions confused arguments with results and messed up the stack.
        Introduced a dedicated bytecode for this situation.
    - (prolang.y) Additions of floats to constant 0 yielded TYPE_ANY
         instead of TYPE_FLOAT.
    - (interpret.c) Arguments passed to runtime_error() were wrong
         if the error happened in a master apply (reported by Gnomi).

10-Apr-2001 (Lars Duening)
    - (exec.h, prolang.y, simulate.c) The program structure received
        a pointer pointing to the blueprint object. Main purpose is to 
        allow the cheap deep update of the master object, but other uses will
        probably show up as well.
    - (simulate.c) Added function deep_destruct() to destruct an
        object and the blueprints of all inherited programs.
    - (backend.c, interpret.c) The signal SIGUSR1 now destructs the