@@ -22,12 +22,14 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 42)
-(Parent-Version lpmud 3-3 41)
-(Version-Log "Oops, didn't compile in COMPAT mode.")
+(Project-Version lpmud 3-3 43)
+(Parent-Version lpmud 3-3 42)
+(Version-Log "Redefining a private heart_beat() works now.
+debug_info(DINFO_DATA, DID_STATUS) was too slow.
+Local variables and function names are (mostly) in different namespaces.")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 16 Apr 2001 21:43:17 -0600")
+(Checkin-Time "Tue, 17 Apr 2001 22:36:10 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -60,8 +62,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.13 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.105 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.164 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.106 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.165 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.9 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -142,7 +144,7 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.16 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.58 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.8 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.39 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.40 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.5 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.28 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.5 644))
@@ -169,7 +171,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.5 644))
   (src/port.c (lpmud/39_port.c 1.17.1.4 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.12 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.48 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.49 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -177,7 +179,7 @@
   (src/regexp.h (lpmud/35_regexp.h 1.11.1.1 644))
   (src/regexp.c (lpmud/36_regexp.c 1.17.1.4.1.2 644))
   (src/rxcache.h (lpmud/e/29_rxcache.h 1.7.1.4 644))
-  (src/rxcache.c (lpmud/e/30_rxcache.c 1.11.1.7 644))
+  (src/rxcache.c (lpmud/e/30_rxcache.c 1.11.1.8 644))
   (src/sent.h (lpmud/33_sent.h 1.11.1.3 644))
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.4 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.7 644))
